# vector-search-hse

./: .editorconfig  .env.default  .gitignore  .pre-commit-config.yaml  Makefile  README.md  _app.py  docker-compose.yml  engines.yml  flake8.tests.ini  pyproject.toml  setup.cfg
baseline/: 000.labels.ipynb  000.video_frames.ipynb  001.baseline.ipynb  001.video_frames.ipynb  002.qdrant_base_search.ipynb  README.md
conf/reranker/: default.yaml
cv_eda/: README.md
data/: lda_topics.json  tags.csv  tags.parquet
deploy/grafana/dashboards/: vector_search.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
docs/: ml-reranker-tracker.md  service.md
eda/: README.md  text_bertopic.ipynb  text_dataset.ipynb  text_eda.ipynb  text_topic.ipynb
flask_from_groundup/: a.py  app.py  c.py  model.pkl
model/: merged_for_boosting.csv
reranker_train/: compute_metrics.py  concatenate_tables.py  test_data.py  train_gbc_reranker.py
research/baseline/: 000.labels.ipynb  README.md
research/cv_eda/: EDA_CV_Year_project.ipynb  README.md
research/eda/: README.md  text_topic.ipynb
research/mlflow/: DL_Experiments.ipynb  load_prd_model.ipynb  train_reranker_mlflow.ipynb
service/: __main__.py  __name__.py  app.py  di.py  settings.py  utils.py
service/adapters/: files.py
service/adapters/engines/: base.py  local.py  schemas.py
service/api/: web.py
service/db/: alembic.ini
service/db/connections/: base.py  postgres.py
service/db/migrations/: env.py
service/db/migrations/versions/: 2025_12_14-41d9dc09f6d1_search_hist.py  2025_12_14-851c74e1e6da_search_hist_user.py  2025_12_14-9c30eb971b72_inference_hist.py
service/db/models/: base.py  inference.py  search.py
service/db/repositories/: base.py  search.py
service/domain/auth/: auth.py  token.py  user.py
service/domain/inference/: schemas.py  types.py
service/domain/internal/: schemas.py
service/domain/internal/errors/: exc.py  handlers.py  registry.py  schemas.py
service/domain/internal/metrics/: collector.py  default.py  instrumentator.py  metrics.py
service/domain/videos/: schemas.py
service/entrypoints/: http_server.py
service/entrypoints/routes/: api.py  web.py
service/services/: auth_service.py  search.py  web.py
service/templates/: index.html
vs/: cli.py  engine.py  frames.py  indexer.py  schemas.py  utils.py  video_file.py
vs/_local/: indexer.py  pipe.py
vs/embedder/: clip.py
vs/embedder/AudioCLIP/model/: audioclip.py
vs/embedder/AudioCLIP/model/clip/: clip.py
vs/embedder/AudioCLIP/model/esresnet/: base.py  fbsp.py
vs/embedder/AudioCLIP/utils/: __init__.py  simple_tokenizer.py  transforms.py
vs/embedder/AudioCLIP/utils/datasets/: us8k.py
vs/engines/: qdrant.py
vs/indexers/: local.py  qdrant.py  qdrant_indexer.py
vs/local/: __init__.py  engine.py  indexer.py  pipeline.py
vs/pipelines/: local.py
vs/reranker/: __init__.py  _env.py  _mlflow_cfg.py  compute_metrics.py  concatenate_tables.py  predict.py  test_data.py  train.py  train_gbc_reranker.py
vs/storage/: local.py
vs/storages/: _local.py  local.py
