[project]
name = "vector-search-hse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
    "clip",
    "deep-translator>=1.11.4",
    "flask>=3.1.2",
    "huggingface-hub>=0.36.0",
    "jinja2>=3.1.6",
    "opencv-python>=4.12.0.88",
    "orjson>=3.11.4",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "qdrant-client[fastembed]>=1.15.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "typer>=0.20.0",
    "uvicorn>=0.38.0",
    "yoyo-migrations>=9.0.0",
]

[dependency-groups]

dev = [
    "ruff>=0.14.1",
    {include-group = "research"},
]
nlp = [
    "bertopic[spacy]>=0.17.3",
    "fast-langdetect>=1.0.0",
    "gensim>=4.4.0",
    "pyldavis>=3.4.1",
    "spacy>=3.8.7",
]
research = [
    "fasttext>=0.9.3",
    "nltk>=3.9.2",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]


[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
