[project]
name = "vector-search-hse"
version = "0.1.0"
description = "Project and service to solve vector-search task"
authors = [
    {name = "andrey",email = "kazachinskii.a@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "fastapi (>=0.124.4,<0.125.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "clip @ git+https://github.com/openai/CLIP.git",
    "wemake-python-styleguide (>=1.4.0,<2.0.0)",
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "typer (>=0.20.0,<0.21.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
research = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "deep-translator (>=1.11.4,<2.0.0)"
]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "mypy (>1.5,<2.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.setuptools]
packages = []

[tool.black]
line-length=90
skip-string-normalization=true
